# GastroMan

./: .gitignore  README.md  TODO  cargo.toml  current_data.sqlite  database.sqlschema
gastro_man_frontend/: README.md  package-lock.json  package.json
gastro_man_frontend/public/: index.html
gastro_man_frontend/src/: App.vue  main.js  router.js  socket.js  store.js  types.js
gastro_man_frontend/src/components/: NavBar.vue  OptionsDropdown.vue  Settings.vue  Tile.vue
gastro_man_frontend/src/tiles/: AddOrder.vue  ManageWorkers.vue  permissions.json
gastro_man_frontend/src/views/: Home.vue  Login.vue
gastro_man_frontend/src/views/admin/: AddWorker.vue  Workers.vue
gastro_man_server/: Cargo.toml  current_data.sqlite
gastro_man_server/src/: main.rs  users.rs
gastro_man_server/src/database/: mod.rs  requests.rs  sessions.rs
gastro_man_server/src/websocket/: admin_handler.rs  json_structs.rs  methods.rs  mod.rs
