[package]
name = "gastro_man_server"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

[dependencies]
colored = "1.7"
sqlite = "0.24.0"
sha3 = "0.8.1"
ws = "*"

serde = { version = "1.0", features = ["derive"] }
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

itertools = "*"
bounded-spsc-queue = "0.4.0"